@@ -24,8 +24,6 @@
 
 package hudson.scm;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.kohsuke.stapler.export.CustomExportedBean;
 
@@ -60,5 +58,5 @@ public final class EditType implements CustomExportedBean {
     public static final EditType EDIT = new EditType("edit", "The file was modified");
     public static final EditType DELETE = new EditType("delete", "The file was removed");
 
-    public static final List<EditType> ALL = Collections.unmodifiableList(Arrays.asList(ADD, EDIT, DELETE));
+    public static final List<EditType> ALL = List.of(ADD, EDIT, DELETE);
 }
